--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node ./src",
+    "dev": "npx nodemon",
     "build": "tsc"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "nodemon": "^2.0.2",
     "ts-node": "^8.7.0",
     "typescript": "^3.8.3"
   },
