--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/redux": "^3.6.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.7.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "redux": "^4.0.5"
   }
 }
