--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/morgan": "^1.9.0",
     "@types/redux": "^3.6.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.7.0",
@@ -30,6 +31,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "redux": "^4.0.5"
   }
 }
