--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/morgan": "^1.9.0",
     "@types/redux": "^3.6.0",
     "nodemon": "^2.0.2",
+    "prettier": "2.0.1",
     "ts-node": "^8.7.0",
     "typescript": "^3.8.3"
   },
