--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/tkjs/tkjs-server#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
     "@types/morgan": "^1.9.0",
+    "@types/qs": "^6.9.1",
     "@types/redux": "^3.6.0",
     "nodemon": "^2.0.2",
     "prettier": "2.0.1",
@@ -30,6 +32,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
